# cargo-features = ["strip"]

[package]
name = "rsdroid"
version = "0.1.0"
authors = ["David Allison <davidallisongithub@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
jni = { version = "0.17.0", default-features = false }
# picked bundled - TODO: Is this correct?
rusqlite = { version = "0.23.1", features = ["trace", "functions", "collation", "bundled"] }
tempfile="3.2.0"
rkv="0.17.0"
tempdir="0.3.7"
prost = "0.6.1"
anyhow= "1.0.47"
num_enum = "0.5.4"
once_cell = "1.8.0"
backtrace = "0.3"
android_logger = "0.10"
log = "0.4.14"
kv="0.22"

[features]
no-android = []

[dev-dependencies]
env_logger = "0.9.0"


[build-dependencies]
prost-build = "0.6.1"
